--- a/app/src/main/res/layout/fragment_note_edit_screen.xml
+++ b/app/src/main/res/layout/fragment_note_edit_screen.xml
@@ -43,6 +43,7 @@
                 android:layout_height="match_parent"
                 android:background="@null"
                 android:hint="  Başlık"
+                android:textColorHint="@color/white"
                 android:importantForAutofill="no"
                 android:maxLength="30"
                 android:singleLine="true"
