--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -8,6 +8,17 @@
     android:background="@color/appColor"
     tools:context=".ui.fragments.MainScreen">
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/search_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:queryHint="Search..."
+        app:iconifiedByDefault="false"
+        app:searchIcon="@drawable/custom_search_icon"
+        app:queryBackground="@null"
+        android:theme="@style/searchViewSettings"
+        />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
