--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,12 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsTranslucent">true</item>
     </style>
-
+    
+    
+    <style name="searchViewSettings">
+        <item name="android:textColorHint">#CEFFFFFF</item>
+        
+    </style>
 
     <style name="Theme.NoteApp" parent="Base.Theme.NoteApp" />
 </resources>
