--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:id="@+id/fragment_main"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,9 +16,10 @@
         android:layout_height="wrap_content"
         app:queryHint="Search..."
         app:iconifiedByDefault="false"
-        app:searchIcon="@drawable/custom_search_icon"
+        app:searchIcon="@null"
         app:queryBackground="@null"
         android:theme="@style/searchViewSettings"
+        app:closeIcon="@android:drawable/ic_menu_close_clear_cancel"
         />
 
     <RelativeLayout
@@ -67,11 +70,11 @@
             android:layout_marginTop="11dp"
             android:layout_marginEnd="11dp"
             android:layout_marginBottom="11dp"
-            android:background="@drawable/custom_rcyclerview_item_background"
-            android:backgroundTint="#FBF4F4"
+            android:background="@drawable/custom_recyclerview_item_background"
+            android:backgroundTint="#F4F6FB"
             android:importantForAccessibility="no"
             android:scaleType="fitCenter"
-            android:src="@drawable/writebutton"
+            android:src="@drawable/edit_or_add_new_note"
             app:borderWidth="0dp"/>
 
     </RelativeLayout>
