--- a/app/src/main/res/layout/fragment_note_edit_screen.xml
+++ b/app/src/main/res/layout/fragment_note_edit_screen.xml
@@ -16,27 +16,24 @@
         >
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
-        <ImageButton
-            android:id="@+id/back_home"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_revert"
-            android:backgroundTint="#00000000"
-            />
-
-        </LinearLayout>
-
-        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/custom_rcyclerview_item_background"
+        android:background="@drawable/custom_recyclerview_item_background"
         android:layout_margin="5dp"
         android:padding="10dp"
         android:backgroundTint="@color/appColor"
         >
+
+            <ImageButton
+                android:id="@+id/back_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#00000000"
+                android:contentDescription="@string/backmainscreen"
+                android:minHeight="48dp"
+                android:src="?attr/homeAsUpIndicator"
+                app:tint="#FFFFFF" />
+
             <EditText
                 android:id="@+id/noteTitle"
                 android:layout_width="match_parent"
@@ -48,6 +45,7 @@
                 android:maxLength="30"
                 android:singleLine="true"
                 android:inputType="text"
+                android:theme="@style/searchViewSettings"
                 tools:ignore="HardcodedText,TextFields,VisualLintTextFieldSize,TouchTargetSizeCheck" />
     </LinearLayout>
 
@@ -57,6 +55,7 @@
             android:layout_height="match_parent"
             android:background="@null"
             android:gravity="start"
+            android:textColor="@color/appColor"
             android:hint="@string/app_name"
             android:textColorHint="@color/appColor"
             android:importantForAutofill="no"
@@ -64,23 +63,5 @@
             tools:ignore="HardcodedText,TextFields,VisualLintTextFieldSize" />
 
     </LinearLayout>
-
-    <ImageButton
-        android:id="@+id/saveButton"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="end|bottom"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/custom_rcyclerview_item_background"
-        android:backgroundTint="@color/appColor"
-        android:importantForAccessibility="no"
-        android:scaleType="center"
-        android:src="@android:drawable/ic_menu_save"
-        app:borderWidth="0dp"/>
 
 </RelativeLayout>
