--- a/app/src/main/res/layout/recycler_row_note.xml
+++ b/app/src/main/res/layout/recycler_row_note.xml
@@ -1,37 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     >
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_margin="5dp"
+        android:gravity="center"
         >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
-            android:layout_margin="5dp"
-            android:padding="10dp"
-            android:background="@drawable/custom_rcyclerview_item_background"
+
+
+            android:background="@drawable/custom_recyclerview_item_background"
             >
 
             <TextView
                 android:id="@+id/noteDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="10dp"
-                android:text="20/08/2023"
                 android:gravity="center"
+                android:text="20/08/2023"
                 android:textColor="#526ba2"
-                />
+                android:textSize="10dp"
+                tools:ignore="TextSizeCheck" />
 
             <TextView
                 android:id="@+id/noteTitle"
