--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/splashFragment">
+    app:startDestination="@id/mainScreen">
 
     <fragment
         android:id="@+id/mainScreen"
@@ -12,7 +12,9 @@
         tools:layout="@layout/fragment_main_screen" >
         <action
             android:id="@+id/action_mainScreen_to_noteEditScreen"
-            app:destination="@id/noteEditScreen" />
+            app:destination="@id/noteEditScreen"
+            app:popUpTo="@id/noteEditScreen"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/noteEditScreen"
@@ -22,20 +24,11 @@
         <action
             android:id="@+id/action_noteEditScreen_to_mainScreen"
             app:destination="@id/mainScreen"
-            app:popUpTo="@id/noteEditScreen"
+            app:popUpTo="@id/mainScreen"
             app:popUpToInclusive="true" />
         <argument
             android:name="note"
             app:argType="com.example.noteapp.model.NoteModel"
             app:nullable="true" />
-    </fragment>
-    <fragment
-        android:id="@+id/splashFragment"
-        android:name="com.example.noteapp.ui.splashScreen.SplashFragment"
-        android:label="fragment_splash"
-        tools:layout="@layout/fragment_splash" >
-        <action
-            android:id="@+id/action_splashFragment_to_mainScreen"
-            app:destination="@id/mainScreen" />
     </fragment>
 </navigation>
