--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -14,7 +14,7 @@
         android:id="@+id/search_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:queryHint="Search..."
+        app:queryHint="Ara..."
         app:iconifiedByDefault="false"
         app:searchIcon="@null"
         app:queryBackground="@null"
